hphp/test/quick/function_pointer/fun_disabled.php.expectf
Fatal error: `fun()` is disabled; switch to first-class references like `test<>` in %s/test/quick/function_pointer/fun_disabled.php on line 5
